# tachyon_api

./: .coveragerc  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  MANIFEST.in  README.md  ROADMAP.md  _build.py  example_v0_4_0.py  pyproject.toml  requirements.txt  setup.py
.cursor/rules/: architecture.mdc
.github/workflows/: build-wheels.yml  ci.yml  pypi.yml
benchmark/: app_bottle.py  app_fastapi.py  app_flask.py  app_starlette.py  app_tachyon.py  profile_breakdown.py  profile_di.py  profile_exc.py  profile_extractors.py  profile_hotpath.py  profile_tachyon.py  run_benchmark.sh
docs/: 01-getting-started.md  02-architecture.md  03-dependency-injection.md  04-parameters.md  05-validation.md  06-security.md  07-caching.md  08-lifecycle.md  09-background-tasks.md  10-websockets.md  11-testing.md  12-cli.md  13-request-lifecycle.md  14-migration-fastapi.md  15-best-practices.md  16-cython-build.md  README.md  audit-v1.2.83.md  cython-plan-v1.2.9.md  tachyon-engine.md
example/: README.md  __init__.py  app.py  config.py  middlewares.py  requirements.txt
example/models/: item.py  user.py
example/modules/: __init__.py
example/modules/admin/: __init__.py  admin_ws.py
example/modules/auth/: __init__.py  auth_controller.py  auth_dto.py  auth_service.py
example/modules/customers/: __init__.py  customers_controller.py  customers_dto.py  customers_repository.py  customers_service.py
example/modules/documents/: __init__.py  documents_controller.py  documents_dto.py  documents_service.py
example/modules/verification/: __init__.py  verification_controller.py  verification_dto.py  verification_service.py  (+1 more)
example/repositories/: item.py  user.py
example/routers/: __init__.py  admin.py  items.py  users.py
example/services/: item.py  user.py
example/shared/: __init__.py  dependencies.py  exceptions.py  id_generator.py  request_context.py  websocket_manager.py
example/tests/: __init__.py  conftest.py  test_async_client.py  test_auth.py  test_customers.py  test_verification.py
scripts/: check_py_pyx_parity.py
tachyon_api/: __init__.py  _server_fast.pyx  app.py  background.py  cache.py  di.py  engine_config.py  exceptions.py  files.py  models.py  openapi.py  params.py  responses.py  router.py  security.py  server.py  testing.py
tachyon_api/adapters/: __init__.py  base.py  engine_adapter.py  starlette_adapter.py
tachyon_api/app/: _404.py  _405.py  __init__.py  _asgi_entry.py  _asgi_handler.py  _docs_routes.py  _docs_schemas.py  _exception_table.py  _exception_table.pyx  _fast_asgi_factory.py  _handler_factory.py  _http_dispatch.py  _mw_stack.py  _registry.py  _route_installer.py
tachyon_api/cli/: main.py  utils.py
tachyon_api/core/: __init__.py  lifecycle.py  websocket.py
tachyon_api/middlewares/: __init__.py  core.py  cors.py  security_headers.py
tachyon_api/openapi/: __init__.py  _config.py  _factory.py  _format_map.py  _generator.py  _info.py  _param_schemas.py  _redoc_html.py  _route_builder.py  _safe_json.py  _scalar_html.py  _server.py  _struct_schemas.py  _swagger_html.py
tachyon_api/processing/: __init__.py  compiler.py  compiler.pyx  dependencies.py  dispatch.py  dispatch.pyx  parameters.py  parameters.pyx  response_processor.py  response_processor.pyx  scope.py  scope.pyx
tachyon_api/responses/: __init__.py  _bytes_response.py  _bytes_response.pyx  _caches.py  _constants.py  _error.py  _internal_error.py  _internal_error.pyx  _json_response.py  _json_response.pyx  _success.py  _validation.py  _wire.py
tachyon_api/routing/: __init__.py  trie.py  trie.pyx
tachyon_api/security/: __init__.py  _api_key_base.py  _api_key_cookie.py  _api_key_header.py  _api_key_query.py  _basic_credentials.py  _bearer_credentials.py  _bearer_parser.py  _bearer_parser.pyx  _http_basic.py  _http_bearer.py  _oauth2_bearer.py
tachyon_api/utils/: type_converter.py  type_utils.py
tests/: __init__.py  conftest.py  helpers.py  shared.py  test_app_core.py  test_asgi_handler_fastpath.py  test_background_tasks.py  test_body_validation.py  test_cache_decorator.py  test_cli.py  test_cookie_params.py  test_cors_middleware.py  test_coverage_gaps.py  test_default_json_response.py  test_dependency_injection.py  test_depends_callable.py  test_error_format.py  test_exception_handling.py  test_file_handling.py  test_header_params.py  test_http_methods.py  test_lifecycle.py  test_list_optional_runtime.py  test_logger_middleware.py  test_middleware.py  test_model_abstraction.py  test_openapi.py  test_openapi_error_responses.py  test_openapi_params.py  test_openapi_params_optional_items.py  test_openapi_struct_deep.py  test_orjson_integration.py  test_param_types_advanced.py  test_path_params.py  test_query_params.py  test_radix_trie.py  test_request_injection.py  test_response_model.py  test_responses.py  test_router.py  (+6 more)
(+55 files in other folders)
