[tool.poetry]
name = "tachyon-api"
version = "1.2.6"
description = "A lightweight, FastAPI-inspired web framework"
authors = ["Juan Manuel Panozzo Zénere <jm.panozzozenere@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
include = [
    { path = "setup.py",                                    format = ["sdist"] },
    { path = "MANIFEST.in",                                 format = ["sdist"] },
    { path = "tachyon_api/routing/trie.pyx",                format = ["sdist"] },
    { path = "tachyon_api/processing/compiler.pyx",         format = ["sdist"] },
    { path = "tachyon_api/processing/parameters.pyx",       format = ["sdist"] },
    { path = "tachyon_api/processing/response_processor.pyx", format = ["sdist"] },
    { path = "tachyon_api/_server_fast.pyx",                  format = ["sdist"] },
]

[tool.poetry.dependencies]
python = "^3.10"
starlette = "^0.47.2"
uvicorn = "^0.35.0"
msgspec = "^0.19.0"
typer = "^0.16.0"
orjson = "^3.11.1"
python-multipart = "^0.0.20"

[tool.poetry.extras]
# Note: pip install tachyon-api[fast] installs cython but does NOT auto-compile.
# Run `python setup.py build_ext --inplace` manually after install.
fast = ["cython"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^1.1.0"
httpx = "^0.28.1"
ruff = "0.14.9"
cython = ">=3.0"
fastapi = "^0.136.1"
pydantic = "^2.13.4"

[tool.poetry.scripts]
tachyon = "tachyon_api.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
