[tool.poetry]
name = "tachyon-api"
version = "1.2.993"
description = "A lightweight, FastAPI-inspired web framework"
authors = ["Juan Manuel Panozzo Zénere <jm.panozzozenere@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
include = [
    { path = "setup.py",                  format = ["sdist"] },
    { path = "MANIFEST.in",               format = ["sdist"] },
    { path = "tachyon_api/**/*.pyx",      format = ["sdist"] },
    { path = "tachyon_api/**/*.pxd",      format = ["sdist"] },
]

[tool.poetry.dependencies]
python = "^3.10"
starlette = "^0.47.2"
uvicorn = "^0.35.0"
httptools = ">=0.6.0"
msgspec = "^0.19.0"
typer = "^0.16.0"
orjson = "^3.11.1"
python-multipart = "^0.0.20"

[tool.poetry.extras]
# Precompiled wheels published to PyPI already include the Cython extensions
# as `.so` files. This extra is only useful when building from sdist on a
# platform without a published wheel — pip will then compile from .pyx.
fast = ["cython"]

[tool.poetry.build]
# Required so poetry-core's wheel builder enters the build-extensions branch
# (it short-circuits when no build_script is configured).  Since `setup.py`
# already exists in the project root, poetry-core uses it as-is and runs
# `python setup.py build` — see
# poetry.core.masonry.builders.sdist.SdistBuilder.setup_py() and
# poetry.core.masonry.builders.wheel.WheelBuilder._run_build_command().
script = "setup.py"
generate-setup-file = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^1.1.0"
httpx = "^0.28.1"
ruff = "0.14.9"
cython = ">=3.0"
fastapi = "^0.136.1"
pydantic = "^2.13.4"

[tool.poetry.scripts]
tachyon = "tachyon_api.cli:app"

[build-system]
requires = ["poetry-core>=1.5.0", "setuptools>=61", "cython>=3.0"]
build-backend = "poetry.core.masonry.api"

[tool.cibuildwheel]
build = ["cp310-*", "cp311-*", "cp312-*", "cp313-*"]
# Skip alternative interpreters/libcs:
# - pp*    : PyPy (Cython generates CPython-API code; would need cffi rewrite)
# - *-musllinux_* : Alpine; not in the supported matrix for v1
# - *t-*   : free-threaded CPython (Cython 3 still maturing GIL-less support)
# - *-win32, *_i686 : 32-bit; nobody serves prod from a 32-bit host
skip = ["pp*", "*-musllinux_*", "*t-*", "*-win32", "*_i686"]
build-frontend = "build"
test-command = "python -c \"import tachyon_api; from tachyon_api.routing.trie import RadixTrie; from tachyon_api.processing.compiler import compile_endpoint; print('tachyon-api wheel smoke test OK')\""

[tool.cibuildwheel.linux]
archs = ["x86_64", "aarch64"]

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]

[tool.cibuildwheel.windows]
archs = ["AMD64"]
